force-app/main/default/objects/Package_Template__mdt/Package_Template__mdt.object-meta.xml
<CustomObject>
    <label>Package Template</label>
    <pluralLabel>Package Templates</pluralLabel>
</CustomObject>