force-app/main/default/objects/Package_Template__mdt/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <label>API Version</label>
    <required>true</required>
    <type>Text</type>
    <length>10</length>
</CustomField>