force-app/main/default/objects/Package_Template__mdt/fields/Excluded_Types__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Types__c</fullName>
    <label>Excluded Types</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>