force-app/main/default/objects/Package_Template__mdt/fields/Included_Types__c.field-meta.xml
<CustomField>
    <fullName>Included_Types__c</fullName>
    <label>Included Types</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>