force-app/main/default/objects/Package_Template__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>